// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BioblocksPortalPage Should match existing snapshot when hooked up to a Redux store. 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UnconnectedBioblocksPortalPage
    dispatchVignettesFetch={[Function]}
    dispatchVisualizationsFetch={[Function]}
    vignettes={
      Array [
        Object {
          "_id": "rise-against-vignette-id",
          "authors": Array [],
          "icon": "",
          "link": "",
          "name": "",
          "summary": "Rise Against Viz",
          "visualizations": Array [
            "franz-ferdinand-viz-id",
          ],
        },
      ]
    }
    visualizations={
      Array [
        Object {
          "_id": "franz-ferdinand-viz-id",
          "authors": Array [
            "Franz Ferdinand",
          ],
          "citations": Array [],
          "compatibleData": Array [],
          "isOriginal": true,
          "labels": Array [],
          "name": "",
          "repo": Object {
            "lastUpdate": "03/13/19",
            "link": "the-dark-of-the-matinée",
            "version": "",
          },
          "summary": "",
          "version": "",
        },
        Object {
          "_id": "eminem-viz-id",
          "authors": Array [
            "Eminem",
          ],
          "citations": Array [],
          "compatibleData": Array [],
          "isOriginal": true,
          "labels": Array [],
          "name": "",
          "repo": Object {
            "lastUpdate": "03/13/19",
            "link": "The Ringer",
            "version": "",
          },
          "summary": "",
          "version": "",
        },
      ]
    }
  >
    <Connect(ConnectedRouterWithContext)
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <ConnectedRouterWithContext
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        onLocationChanged={[Function]}
      >
        <ConnectedRouter
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "createHref": [Function],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          onLocationChanged={[Function]}
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <Router
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "createHref": [Function],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
          >
            <Container
              fluid={true}
              id="BioblocksPortalPage"
            >
              <div
                className="ui fluid container"
                id="BioblocksPortalPage"
              >
                <Connect(UnconnectedSiteHeader)
                  dispatchVignettesFetch={[Function]}
                  dispatchVisualizationsFetch={[Function]}
                  vignettes={
                    Array [
                      Object {
                        "_id": "rise-against-vignette-id",
                        "authors": Array [],
                        "icon": "",
                        "link": "",
                        "name": "",
                        "summary": "Rise Against Viz",
                        "visualizations": Array [
                          "franz-ferdinand-viz-id",
                        ],
                      },
                    ]
                  }
                  visualizations={
                    Array [
                      Object {
                        "_id": "franz-ferdinand-viz-id",
                        "authors": Array [
                          "Franz Ferdinand",
                        ],
                        "citations": Array [],
                        "compatibleData": Array [],
                        "isOriginal": true,
                        "labels": Array [],
                        "name": "",
                        "repo": Object {
                          "lastUpdate": "03/13/19",
                          "link": "the-dark-of-the-matinée",
                          "version": "",
                        },
                        "summary": "",
                        "version": "",
                      },
                      Object {
                        "_id": "eminem-viz-id",
                        "authors": Array [
                          "Eminem",
                        ],
                        "citations": Array [],
                        "compatibleData": Array [],
                        "isOriginal": true,
                        "labels": Array [],
                        "name": "",
                        "repo": Object {
                          "lastUpdate": "03/13/19",
                          "link": "The Ringer",
                          "version": "",
                        },
                        "summary": "",
                        "version": "",
                      },
                    ]
                  }
                >
                  <UnconnectedSiteHeader
                    dispatch={[Function]}
                    dispatchVignettesFetch={[Function]}
                    dispatchVisualizationsFetch={[Function]}
                    pathname="/"
                    search=""
                    vignettes={
                      Array [
                        Object {
                          "_id": "rise-against-vignette-id",
                          "authors": Array [],
                          "icon": "",
                          "link": "",
                          "name": "",
                          "summary": "Rise Against Viz",
                          "visualizations": Array [
                            "franz-ferdinand-viz-id",
                          ],
                        },
                      ]
                    }
                    visualizations={
                      Array [
                        Object {
                          "_id": "franz-ferdinand-viz-id",
                          "authors": Array [
                            "Franz Ferdinand",
                          ],
                          "citations": Array [],
                          "compatibleData": Array [],
                          "isOriginal": true,
                          "labels": Array [],
                          "name": "",
                          "repo": Object {
                            "lastUpdate": "03/13/19",
                            "link": "the-dark-of-the-matinée",
                            "version": "",
                          },
                          "summary": "",
                          "version": "",
                        },
                        Object {
                          "_id": "eminem-viz-id",
                          "authors": Array [
                            "Eminem",
                          ],
                          "citations": Array [],
                          "compatibleData": Array [],
                          "isOriginal": true,
                          "labels": Array [],
                          "name": "",
                          "repo": Object {
                            "lastUpdate": "03/13/19",
                            "link": "The Ringer",
                            "version": "",
                          },
                          "summary": "",
                          "version": "",
                        },
                      ]
                    }
                  >
                    <Header>
                      <div
                        className="ui header"
                      >
                        <Menu
                          borderless={true}
                          fluid={true}
                          secondary={true}
                          style={
                            Object {
                              "maxHeight": "40px",
                              "padding": "20px 0 0 0",
                            }
                          }
                        >
                          <div
                            className="ui borderless fluid secondary menu"
                            style={
                              Object {
                                "maxHeight": "40px",
                                "padding": "20px 0 0 0",
                              }
                            }
                          >
                            <MenuItem
                              fitted="vertically"
                              position="left"
                            >
                              <div
                                className="left vertically fitted item"
                                onClick={[Function]}
                              >
                                <Link
                                  replace={false}
                                  to="/"
                                >
                                  <a
                                    href="#/"
                                    onClick={[Function]}
                                  >
                                    <img
                                      alt="hca-dynamics-icon"
                                      src="assets/icons/bio-blocks-icon-2x.png"
                                      style={
                                        Object {
                                          "height": "32px",
                                          "width": "32px",
                                        }
                                      }
                                    />
                                    <span
                                      style={
                                        Object {
                                          "color": "black",
                                          "fontSize": "32px",
                                          "fontWeight": "bold",
                                        }
                                      }
                                    >
                                      HCA Dynamics
                                    </span>
                                  </a>
                                </Link>
                              </div>
                            </MenuItem>
                            <Menu
                              defaultActiveIndex={-1}
                              secondary={true}
                            >
                              <div
                                className="ui secondary menu"
                              >
                                <MenuItem
                                  key="datasets"
                                >
                                  <div
                                    className="item"
                                    onClick={[Function]}
                                  >
                                    <Link
                                      replace={false}
                                      style={
                                        Object {
                                          "color": "black",
                                          "fontSize": "18px",
                                        }
                                      }
                                      to="/dataset"
                                    >
                                      <a
                                        href="#/dataset"
                                        onClick={[Function]}
                                        style={
                                          Object {
                                            "color": "black",
                                            "fontSize": "18px",
                                          }
                                        }
                                      >
                                        datasets
                                      </a>
                                    </Link>
                                  </div>
                                </MenuItem>
                                <MenuItem
                                  key="visualizations"
                                >
                                  <div
                                    className="item"
                                    onClick={[Function]}
                                  >
                                    <Link
                                      replace={false}
                                      style={
                                        Object {
                                          "color": "black",
                                          "fontSize": "18px",
                                        }
                                      }
                                      to="/visualizations"
                                    >
                                      <a
                                        href="#/visualizations"
                                        onClick={[Function]}
                                        style={
                                          Object {
                                            "color": "black",
                                            "fontSize": "18px",
                                          }
                                        }
                                      >
                                        visualizations
                                      </a>
                                    </Link>
                                  </div>
                                </MenuItem>
                                <MenuItem
                                  key="vignettes"
                                >
                                  <div
                                    className="item"
                                    onClick={[Function]}
                                  >
                                    <Link
                                      replace={false}
                                      style={
                                        Object {
                                          "color": "black",
                                          "fontSize": "18px",
                                        }
                                      }
                                      to="/vignettes"
                                    >
                                      <a
                                        href="#/vignettes"
                                        onClick={[Function]}
                                        style={
                                          Object {
                                            "color": "black",
                                            "fontSize": "18px",
                                          }
                                        }
                                      >
                                        vignettes
                                      </a>
                                    </Link>
                                  </div>
                                </MenuItem>
                              </div>
                            </Menu>
                            <MenuItem
                              position="right"
                            >
                              <div
                                className="right item"
                                onClick={[Function]}
                              >
                                <Input
                                  icon="search"
                                  size="massive"
                                  transparent={true}
                                  type="text"
                                >
                                  <div
                                    className="ui massive transparent icon input"
                                  >
                                    <input
                                      onChange={[Function]}
                                      type="text"
                                    />
                                    <Icon
                                      as="i"
                                      name="search"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="search icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </div>
                                </Input>
                              </div>
                            </MenuItem>
                          </div>
                        </Menu>
                        <Breadcrumb
                          style={
                            Object {
                              "padding": "0 0 0 40px",
                            }
                          }
                        >
                          <div
                            className="ui breadcrumb"
                            style={
                              Object {
                                "padding": "0 0 0 40px",
                              }
                            }
                          >
                            <BreadcrumbSection>
                              <div
                                className="section"
                                onClick={[Function]}
                              >
                                <Link
                                  replace={false}
                                  to="/"
                                >
                                  <a
                                    href="#/"
                                    onClick={[Function]}
                                  >
                                    home
                                  </a>
                                </Link>
                              </div>
                            </BreadcrumbSection>
                          </div>
                        </Breadcrumb>
                      </div>
                    </Header>
                  </UnconnectedSiteHeader>
                </Connect(UnconnectedSiteHeader)>
                <Switch>
                  <Route
                    computedMatch={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/",
                        "url": "/",
                      }
                    }
                    exact={true}
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    path="/"
                    render={[Function]}
                  >
                    <LandingPage
                      featuredVignettes={Array []}
                      featuredVisualizations={Array []}
                      history={
                        Object {
                          "action": "POP",
                          "block": [Function],
                          "createHref": [Function],
                          "go": [Function],
                          "goBack": [Function],
                          "goForward": [Function],
                          "length": 1,
                          "listen": [Function],
                          "location": Object {
                            "hash": "",
                            "pathname": "/",
                            "search": "",
                            "state": undefined,
                          },
                          "push": [Function],
                          "replace": [Function],
                        }
                      }
                      location={
                        Object {
                          "hash": "",
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        }
                      }
                      match={
                        Object {
                          "isExact": true,
                          "params": Object {},
                          "path": "/",
                          "url": "/",
                        }
                      }
                    >
                      <Container
                        fluid={false}
                      >
                        <div
                          className="ui container"
                        >
                          <Segment
                            basic={true}
                            padded="very"
                          >
                            <div
                              className="ui basic very padded segment"
                            >
                              <Grid
                                centered={true}
                                padded={true}
                                relaxed={true}
                              >
                                <div
                                  className="ui centered padded relaxed grid"
                                >
                                  <GridRow
                                    centered={false}
                                  >
                                    <div
                                      className="row"
                                    >
                                      <GridColumn
                                        width={12}
                                      >
                                        <div
                                          className="twelve wide column"
                                        >
                                          <Header
                                            floated="left"
                                          >
                                            <div
                                              className="ui left floated header"
                                            >
                                              Featured Vignettes
                                            </div>
                                          </Header>
                                          <Divider
                                            section={true}
                                          >
                                            <div
                                              className="ui section divider"
                                            />
                                          </Divider>
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                  <GridRow
                                    centered={false}
                                  >
                                    <div
                                      className="row"
                                    >
                                      <GridColumn
                                        width={12}
                                      >
                                        <div
                                          className="twelve wide column"
                                        >
                                          <Link
                                            replace={false}
                                            style={
                                              Object {
                                                "color": "blue",
                                                "float": "right",
                                              }
                                            }
                                            to="vignettes"
                                          >
                                            <a
                                              href="#/vignettes"
                                              onClick={[Function]}
                                              style={
                                                Object {
                                                  "color": "blue",
                                                  "float": "right",
                                                }
                                              }
                                            >
                                              more vignettes...
                                            </a>
                                          </Link>
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                  <GridRow
                                    centered={false}
                                  >
                                    <div
                                      className="row"
                                    >
                                      <GridColumn
                                        width={12}
                                      >
                                        <div
                                          className="twelve wide column"
                                        >
                                          <Header
                                            floated="left"
                                          >
                                            <div
                                              className="ui left floated header"
                                            >
                                              Featured Visualizations
                                            </div>
                                          </Header>
                                          <Divider
                                            section={true}
                                          >
                                            <div
                                              className="ui section divider"
                                            />
                                          </Divider>
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                  <GridRow
                                    centered={false}
                                  >
                                    <div
                                      className="row"
                                    >
                                      <GridColumn
                                        width={12}
                                      >
                                        <div
                                          className="twelve wide column"
                                        >
                                          <Link
                                            replace={false}
                                            style={
                                              Object {
                                                "color": "blue",
                                                "float": "right",
                                              }
                                            }
                                            to="visualizations"
                                          >
                                            <a
                                              href="#/visualizations"
                                              onClick={[Function]}
                                              style={
                                                Object {
                                                  "color": "blue",
                                                  "float": "right",
                                                }
                                              }
                                            >
                                              more visualizations...
                                            </a>
                                          </Link>
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                  <GridRow
                                    centered={true}
                                  >
                                    <div
                                      className="centered row"
                                    >
                                      <GridColumn
                                        width={12}
                                      >
                                        <div
                                          className="twelve wide column"
                                        >
                                          <Header
                                            floated="left"
                                          >
                                            <div
                                              className="ui left floated header"
                                            >
                                              Featured Datasets
                                            </div>
                                          </Header>
                                          <Divider
                                            section={true}
                                          >
                                            <div
                                              className="ui section divider"
                                            />
                                          </Divider>
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                  <GridRow
                                    columns={2}
                                    divided={true}
                                  >
                                    <div
                                      className="divided two column row"
                                    >
                                      <GridColumn
                                        width={3}
                                      >
                                        <div
                                          className="three wide column"
                                        >
                                          <GridRow>
                                            <div
                                              className="row"
                                            >
                                              <img
                                                alt="human cell atlas logo"
                                                src="assets/icons/hca-logo.png"
                                                style={
                                                  Object {
                                                    "height": "250px",
                                                    "width": "150px",
                                                  }
                                                }
                                              />
                                              <GridRow>
                                                <div
                                                  className="row"
                                                >
                                                  <a
                                                    href="https://preview.data.humancellatlas.org/"
                                                  >
                                                    Search HCA datasets ...
                                                  </a>
                                                </div>
                                              </GridRow>
                                            </div>
                                          </GridRow>
                                        </div>
                                      </GridColumn>
                                      <GridColumn
                                        stretched={true}
                                        textAlign="left"
                                        width={8}
                                      >
                                        <div
                                          className="stretched left aligned eight wide column"
                                        >
                                          <GridRow
                                            textAlign="center"
                                          >
                                            <div
                                              className="center aligned row"
                                            >
                                              <Header
                                                as="h2"
                                                textAlign="center"
                                              >
                                                <h2
                                                  className="ui center aligned header"
                                                >
                                                  User shared
                                                </h2>
                                              </Header>
                                            </div>
                                          </GridRow>
                                          <br />
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                  <GridRow
                                    centered={false}
                                  >
                                    <div
                                      className="row"
                                    >
                                      <GridColumn
                                        width={12}
                                      >
                                        <div
                                          className="twelve wide column"
                                        >
                                          <Link
                                            replace={false}
                                            style={
                                              Object {
                                                "color": "blue",
                                                "float": "right",
                                              }
                                            }
                                            to="datasets"
                                          >
                                            <a
                                              href="#/datasets"
                                              onClick={[Function]}
                                              style={
                                                Object {
                                                  "color": "blue",
                                                  "float": "right",
                                                }
                                              }
                                            >
                                              more datasets...
                                            </a>
                                          </Link>
                                        </div>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </div>
                              </Grid>
                            </div>
                          </Segment>
                        </div>
                      </Container>
                    </LandingPage>
                  </Route>
                </Switch>
              </div>
            </Container>
          </Router>
        </ConnectedRouter>
      </ConnectedRouterWithContext>
    </Connect(ConnectedRouterWithContext)>
  </UnconnectedBioblocksPortalPage>
</Provider>
`;

exports[`BioblocksPortalPage Should match existing snapshot when no props are provided. 1`] = `
<Connect(ConnectedRouterWithContext)
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Container
    fluid={true}
    id="BioblocksPortalPage"
  >
    <Connect(UnconnectedSiteHeader)
      dispatchVignettesFetch={[Function]}
      dispatchVisualizationsFetch={[Function]}
      vignettes={Array []}
      visualizations={Array []}
    />
    <Switch>
      <Route
        exact={true}
        path="/visualizations"
        render={[Function]}
        strict={true}
      />
      <Route
        exact={true}
        path="/visualizations/"
        render={[Function]}
        strict={true}
      />
      <Route
        path="/dataset"
        render={[Function]}
      />
      <Route
        path="/vignettes"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
    </Switch>
  </Container>
</Connect(ConnectedRouterWithContext)>
`;

exports[`BioblocksPortalPage Should match existing snapshot when vignettes and visualizations are given. 1`] = `
<Connect(ConnectedRouterWithContext)
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Container
    fluid={true}
    id="BioblocksPortalPage"
  >
    <Connect(UnconnectedSiteHeader)
      dispatchVignettesFetch={[Function]}
      dispatchVisualizationsFetch={[Function]}
      vignettes={
        Array [
          Object {
            "_id": "rise-against-vignette-id",
            "authors": Array [],
            "icon": "",
            "link": "",
            "name": "",
            "summary": "Rise Against Viz",
            "visualizations": Array [
              "franz-ferdinand-viz-id",
            ],
          },
        ]
      }
      visualizations={
        Array [
          Object {
            "_id": "eminem-viz-id",
            "authors": Array [
              "Eminem",
            ],
            "citations": Array [],
            "compatibleData": Array [],
            "isOriginal": true,
            "labels": Array [],
            "name": "",
            "repo": Object {
              "lastUpdate": "03/13/19",
              "link": "The Ringer",
              "version": "",
            },
            "summary": "",
            "version": "",
          },
        ]
      }
    />
    <Switch>
      <Route
        exact={true}
        path="/visualizations"
        render={[Function]}
        strict={true}
      />
      <Route
        exact={true}
        path="/visualizations/"
        render={[Function]}
        strict={true}
      />
      <Route
        path="/dataset"
        render={[Function]}
      />
      <Route
        path="/vignettes"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
    </Switch>
  </Container>
</Connect(ConnectedRouterWithContext)>
`;
